--- a/login.html
+++ b/login.html
@@ -130,8 +130,8 @@
             <form >
             
                 <div class="login-box">
-                    <input type="email" class="email ele" placeholder="youremail@email.com" required><br>
-                    <input type="password" class="password ele" placeholder="password" required><br>
+                    <input type="email" class="email ele" placeholder="youremail@email.com" required>
+                    <input type="password" class="password ele" placeholder="password" required>
                     <button type="submit" class="clkbtn" onclick="mymessage()">Login</button><br><br>
                 </div>
             </form>
